srv/style.scss
@use "bulma";
@use "bulma/sass/utilities/initial-variables" as iv;
@use "bulma/sass/utilities/mixins" as mixins;

@keyframes marquee {
    0%   { transform: translate(0, 0); }
    100% { transform: translate(-100%, 0); }
}

#head {
    position: sticky;
    top: 0px;
    z-index: 10;
    max-width: 100vw;
    overflow: hidden;
    background-color: #002442;
    .pagination-previous,
    .pagination-next,
    .pagination-link {
        border-color: iv.$grey;
        color: iv.$white-ter;
    }
    .pagination-next.track:not(.is-hidden) {
        order: 0;
        min-width: 100vw;
    }
    @include mixins.mobile {
        .pagination-next.track:not(.is-hidden) {
            min-width: 200vw;
            overflow: hidden;
            display: inline-block;
            padding-left: 100%;
            animation: marquee 10s linear forwards;
        }
    }
}
table {
    &.main, &.chart, &.search {
        & > thead th:first-child, & > tbody > tr:not(.info) > td:first-child {
            text-align: right;
        }
    }
}
table.main {
    @include mixins.until(384px) {
        font-size: iv.$size-7;
    }
    & > thead {
        position: sticky;
        top: 2.46rem;
        z-index: 10;
        background-color: inherit;
    }
    .info {
        & > td {
            padding: .25em .25em 1em .5em;
        }
        .progression {
            overflow: auto;
            max-width: 100vw;
        }
        .artists {
            &.is-narrow {
                max-width: 100vw;
            }
            .container.artist-chart {
                max-width: fit-content;
                table.chart {
                    margin: 0 auto;
                    .is-selected {
                        font-weight: bold;
                    }
                }
            }
        }
    }
}
#search {
    .modal-content {
        min-height: 26.5rem;
    }
}

